--- a/index.html
+++ b/index.html
@@ -13,18 +13,34 @@
         </div>
         <div id="number">
             <div id="top-row">
-
+                <button class="button">7</button>
+                <button class="button">8</button>
+                <button class="button">9</button>
             </div>
-
+            
             <div id="middle-row">
-
+                <button class="button">4</button>
+                <button class="button">5</button>
+                <button class="button">6</button>
             </div>
             <div id="bottom-row">
+                <button class="button">1</button>
+                <button class="button">2</button>
+                <button class="button">3</button>
+            </div>
 
+            <div id="reset-row">
+                <button class="button">0</button>
+                <button class="button">.</button>
+                <button class="button">AC</button>
             </div>
         </div>
         <div id="operations">
-
+            <button class="button">+</button>
+            <button class="button">&minus;</button>
+            <button class="button">&times;</button>
+            <button class="button">&divide;</button>
+            <button class="button">&equals;</button>
         </div>
 
     </div>
